--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.6.0",
+    "kdpa-components": "^1.3.0",
+    "re-resizable": "^6.9.9",
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
     "react-perfect-scrollbar": "^1.5.8",
-    "react-router-dom": "^6.11.2"
+    "react-router-dom": "^6.11.2",
+    "react-zoom-pan-pinch": "^3.0.7"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
