--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@craftjs/core": "^0.2.0-beta.11",
+    "@craftjs/layers": "^0.2.0-beta.11",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-icons": "^1.3.0",
     "class-variance-authority": "^0.6.0",
