--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-contenteditable": "^3.3.7",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.11.2",
     "react-zoom-pan-pinch": "^3.0.7"
